@@ -19,10 +19,8 @@ import project.SangHyun.study.study.enums.StudyRole;
 import project.SangHyun.study.study.enums.StudyState;
 import project.SangHyun.study.study.repository.StudyRepository;
 import project.SangHyun.study.study.service.impl.StudyServiceImpl;
-import project.SangHyun.study.studyboard.domain.StudyBoard;
+import project.SangHyun.study.study.tools.StudyFactory;
 import project.SangHyun.study.studyjoin.domain.StudyJoin;
-import project.SangHyun.study.studyjoin.dto.response.StudyFindMembersResponseDto;
-import project.SangHyun.study.studyjoin.repository.StudyJoinRepository;
 
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -40,22 +38,15 @@ class StudyServiceUnitTest {
     StudyServiceImpl studyService;
     @Mock
     StudyRepository studyRepository;
-    @Mock
-    StudyJoinRepository studyJoinRepository;
 
     @Test
     @DisplayName("스터디를 생성한다.")
     public void createStudy() throws Exception {
         //given
-        Long memberId = 1L;
-        StudyCreateRequestDto requestDto = new StudyCreateRequestDto(memberId, "테스트 스터디", "백엔드",
-                null, 2L, StudyState.STUDYING, RecruitState.PROCEED);
-
-        Long studyId = 1L;
-        Study study = requestDto.toEntity();
-        ReflectionTestUtils.setField(study, "id", studyId);
-
-        StudyCreateResponseDto ExpectResult = StudyCreateResponseDto.create(study);
+        Member member = StudyFactory.makeTestAuthMember();
+        StudyCreateRequestDto requestDto = StudyFactory.makeCreateDto(member);
+        Study study = StudyFactory.makeTestStudy(member, null, null);
+        StudyCreateResponseDto ExpectResult = StudyFactory.makeCreateResponseDto(study);
 
         //mocking
         given(studyRepository.save(any())).willReturn(study);
@@ -73,18 +64,12 @@ class StudyServiceUnitTest {
     @DisplayName("모든 스터디 정보를 로드한다.")
     public void loadStudyInfo() throws Exception {
         //given
-        Long memberId = 1L;
-        StudyCreateRequestDto requestDto = new StudyCreateRequestDto(memberId, "테스트 스터디", "백엔드",
-                null, 2L, StudyState.STUDYING, RecruitState.PROCEED);
-
-        Long studyId = 1L;
-        Study study = requestDto.toEntity();
-        ReflectionTestUtils.setField(study, "id", studyId);
-
-        List<StudyFindResponseDto> ExpectResult = Arrays.asList(StudyFindResponseDto.create(study));
+        Member member = StudyFactory.makeTestAuthMember();
+        Study study = StudyFactory.makeTestStudy(member, new ArrayList<>(), new ArrayList<>());
+        List<StudyFindResponseDto> ExpectResult = StudyFactory.makeFindAllResponseDto(study);
 
         //mocking
-        given(studyRepository.findAll()).willReturn(new ArrayList<>(Arrays.asList(study)));
+        given(studyRepository.findAll()).willReturn(List.of(study));
 
         //when
         List<StudyFindResponseDto> ActualResult = studyService.findAllStudies();
@@ -98,25 +83,18 @@ class StudyServiceUnitTest {
     @DisplayName("스터디에 대한 세부정보를 로드한다.")
     public void loadStudyDetail() throws Exception {
         //given
-        Long memberId = 1L;
-        StudyCreateRequestDto requestDto = new StudyCreateRequestDto(memberId, "테스트 스터디", "백엔드",
-                null, 2L, StudyState.STUDYING, RecruitState.PROCEED);
-
-        Long studyId = 1L;
-        Study study = requestDto.toEntity();
-        ReflectionTestUtils.setField(study, "id", studyId);
-
-        StudyFindResponseDto ExpectResult = StudyFindResponseDto.create(study);
+        Member member = StudyFactory.makeTestAuthMember();
+        Study study = StudyFactory.makeTestStudy(member, new ArrayList<>(), new ArrayList<>());
+        StudyFindResponseDto ExpectResult = StudyFactory.makeFindResponseDto(study);
 
         //mocking
-        given(studyRepository.findStudyById(studyId)).willReturn(study);
+        given(studyRepository.findStudyById(study.getId())).willReturn(study);
 
         //when
-        StudyFindResponseDto ActualResult = studyService.findStudy(studyId);
+        StudyFindResponseDto ActualResult = studyService.findStudy(study.getId());
 
         //then
         Assertions.assertEquals(ExpectResult.getStudyId(), ActualResult.getStudyId());
-        Assertions.assertEquals(ExpectResult.getTitle(), ActualResult.getTitle());
         Assertions.assertEquals(ExpectResult.getHeadCount(), 2L);
     }
 
@@ -124,24 +102,15 @@ class StudyServiceUnitTest {
     @DisplayName("스터디의 정보를 업데이트한다.")
     public void updateStudy() throws Exception {
         //given
-        Long memberId = 1L;
-        StudyCreateRequestDto requestDto = new StudyCreateRequestDto(memberId, "테스트 스터디", "백엔드",
-                null, 2L, StudyState.STUDYING, RecruitState.PROCEED);
-
-        Long studyId = 1L;
-        Study study = requestDto.toEntity();
-        ReflectionTestUtils.setField(study, "id", studyId);
-
-        StudyJoin studyJoin = new StudyJoin(new Member(memberId), new Study(studyId), StudyRole.CREATOR);
-
-        StudyUpdateRequestDto updateRequestDto = new StudyUpdateRequestDto("테스트 스터디 변경", "프론트엔드",
-                null, 2L, StudyState.STUDYING, RecruitState.PROCEED);
+        Member member = StudyFactory.makeTestAuthMember();
+        Study study = StudyFactory.makeTestStudy(member, new ArrayList<>(), new ArrayList<>());
+        StudyUpdateRequestDto updateRequestDto = StudyFactory.makeUpdateDto("테스트 스터디 변경", "프론트엔드");
 
         //mocking
-        given(studyRepository.findById(studyId)).willReturn(Optional.ofNullable(study));
+        given(studyRepository.findById(study.getId())).willReturn(Optional.ofNullable(study));
 
         //when
-        StudyUpdateResponseDto ActualResult = studyService.updateStudy(studyId, updateRequestDto);
+        StudyUpdateResponseDto ActualResult = studyService.updateStudy(study.getId(), updateRequestDto);
 
         //then
         Assertions.assertEquals("테스트 스터디 변경", ActualResult.getTitle());
@@ -152,21 +121,16 @@ class StudyServiceUnitTest {
     @DisplayName("스터디의 정보를 삭제한다.")
     public void deleteStudy() throws Exception {
         //given
-        Long memberId = 1L;
-        Long studyId = 1L;
-        Study study = new Study(1L);
-        ReflectionTestUtils.setField(study, "id", studyId);
-
-        StudyJoin studyJoin = new StudyJoin(new Member(memberId), new Study(studyId), StudyRole.CREATOR);
-
+        Member member = StudyFactory.makeTestAuthMember();
+        Study study = StudyFactory.makeTestStudy(member, new ArrayList<>(), new ArrayList<>());
         StudyDeleteResponseDto ExpectResult = StudyDeleteResponseDto.create(study);
 
         //mocking
-        given(studyRepository.findById(studyId)).willReturn(Optional.ofNullable(study));
+        given(studyRepository.findById(study.getId())).willReturn(Optional.ofNullable(study));
         willDoNothing().given(studyRepository).delete(study);
 
         //when
-        StudyDeleteResponseDto ActualResult = studyService.deleteStudy(studyId);
+        StudyDeleteResponseDto ActualResult = studyService.deleteStudy(study.getId());
 
         //then
         Assertions.assertEquals(ExpectResult.getTitle(), ActualResult.getTitle());
